--- a/css/global.css
+++ b/css/global.css
@@ -96,7 +96,8 @@ html {
   font-size: 16px;
   -webkit-text-size-adjust: 100%;
   overflow-x: hidden;
-  max-width: 100vw;
+  width: 100%;
+  max-width: 100%;
 }
 
 body {
@@ -107,7 +108,8 @@ body {
   line-height: 1.65;
   font-weight: 400;
   overflow-x: hidden;
-  max-width: 100vw;
+  width: 100%;
+  max-width: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   transition: background-color var(--duration-md) var(--ease-default), color var(--duration-md) var(--ease-default);
